# NNcpp

./: CMakeLists.txt
Layers/: ActivationFunctions.cpp  ActivationFunctions.h  ILayers.cpp  ILayers.h  ITeach.cpp  ITeach.h  Layer.cpp  Layer.h  List.cpp  List.h  cpp.hint
Neurons/: Neurons.cpp  answer.txt  input.txt
